duck/test/fail/duplicate_constructor.duck
import base
data A of { B ; B }
main = exit 0
